Fixed vertical scrollbar bug

--- a/components/app/app.css
+++ b/components/app/app.css
@@ -19,7 +19,7 @@ h1 {
     color: black;
     padding-top: 5px;
     padding-bottom: 5px;
-    min-height: calc(100% - 70px);
+    height: calc(100% - 70px);
 }
 
 #mainleftcol {
